Added line numbers to code and line highlighting

--- a/client/assets/styles/main.scss
+++ b/client/assets/styles/main.scss
@@ -1,3 +1,12 @@
 a {
   cursor: pointer;
 }
+
+.codeList {
+  li {
+    &:hover {
+      background-color: black;
+      color: yellow;
+    }
+  }
+}
