--- a/client/assets/styles/main.scss
+++ b/client/assets/styles/main.scss
@@ -2,6 +2,13 @@ a {
   cursor: pointer;
 }
 
+input {
+  &:focus {
+    outline: none;
+  }
+}
+
+
 nav {
   margin-top: 1em;
 }
@@ -54,5 +61,12 @@ pre {
 
 .fa-sign-in:hover {
   color: green;
+}
+
+#bigSearch {
+  font-weight: 100;
+  width: 100%;
+  font-size: 4em;
+  padding-left: 0.3em;
 }
 
