--- a/client/assets/styles/main.scss
+++ b/client/assets/styles/main.scss
@@ -1,3 +1,48 @@
+#site-wrapper {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 100vh;
+}
+
+#site-canvas {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  -webkit-transform: translateX(0);
+  transform: translateX(0);
+  -webkit-transition: .3s ease all;
+  transition: .3s ease all;
+}
+
+#site-menu {
+  width: 200px;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  right: -200px;
+  background: black;
+  font-size: 1.8em;
+  color: white;
+  margin-top: -15px;
+
+  .list-group-item {
+    border: none;
+    padding-left: 25px;
+    cursor: pointer;
+    font-weight: 100;
+    &:hover {
+      color: black;
+      background-color: white;
+    }
+  }
+}
+
+#site-wrapper.show-nav #site-canvas {
+  -webkit-transform: translateX(-200px);
+  transform: translateX(-200px);
+}
+
 a {
   cursor: pointer;
 }
@@ -68,5 +113,14 @@ pre {
   width: 100%;
   font-size: 4em;
   padding-left: 0.3em;
+}
+
+.blackBack {
+  background-color: black;
+}
+
+.whiteOnBlack {
+  color: white;
+  background-color: black;
 }
 
